# console

./: LICENSE.md  README.md  meson.build  todo.md
_build/: cppcheck.py  set_version.py  update_keys.sh
_includes/: meson.build
_keys/: brip_dev_key.pub  brip_release_key.pub
console/: background.cpp  background.hpp  colors.cpp  colors.hpp  console-ut.cpp  console.hpp  console_color.hpp  counter.cpp  counter.hpp  cursor.cpp  cursor.hpp  escape.hpp  imbue.hpp  line.cpp  line.hpp  meson.build  position.cpp  position.hpp  progress-ut.cpp  progress.hpp  progress_bar.cpp  progress_bar.hpp  progress_indicator.cpp  progress_indicator.hpp  reset.cpp  reset.hpp  screen.cpp  screen.hpp  spinner-ut.cpp  spinner.cpp  spinner.hpp  style.cpp  style.hpp
